another go on VICS82 and first pass on UKIDSS-LAS (HS82)

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
@@ -135,8 +135,8 @@
     "\n",
     "#replace list of aperture magnitudes with appropriate choice from list\n",
     "# Apertures (1\", 1.5\", 2\", 2.5\" and 3\"\n",
-    "catalogue[\"m_ap_vics82_k\"] = catalogue[\"m_ap_vics82_k\"][:,2]\n",
-    "catalogue[\"m_ap_vics82_j\"] = catalogue[\"m_ap_vics82_j\"][:,2]\n",
+    "catalogue[\"m_ap_vics82_k\"] = [mag[0] for mag in catalogue[\"m_ap_vics82_k\"]]\n",
+    "catalogue[\"m_ap_vics82_j\"] = [mag[0] for mag in catalogue[\"m_ap_vics82_j\"]]\n",
     "# TODO: Check this works as expected."
    ]
   },
