--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.4_UKIDSS-LAS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.4_UKIDSS-LAS.ipynb
@@ -16,12 +16,12 @@
     "- The identifier (it's unique in the catalogue);\n",
     "- The position;\n",
     "- The stellarity;\n",
-    "- The magnitude for each band in apertude 3 (2 arcsec).\n",
-    "- The kron magnitude to be used as total magnitude (no “auto” magnitude is provided).\n",
+    "- The magnitude for each band in aperture 3 (2 arcsec).\n",
+    "- The hall magnitude is described as the total magnitude.\n",
     "\n",
-    "The catalogue has been cross-matched with 2MASS catalogue to check that the magnitudes are AB ones.\n",
+    "J band magnitudes are available in two eopchs. We take the first arbitrarily.\n",
     "\n",
-    "A query to the UKIDSS database with 242.9+55.071 position returns a list of images taken between 2007 and 2009. Let's take 2008 for the epoch.\n"
+    "Each source is associated with an epoch. These range between 2005 and 2007. We take 2006 for the epoch.\n"
    ]
   },
   {
@@ -127,15 +127,23 @@
     "        'sourceid': 'las_id',\n",
     "        'RA': 'las_ra',\n",
     "        'Dec': 'las_dec',\n",
-    "        'JAPERMAG3': 'm_app_ukidss_j',\n",
-    "        'JAPERMAG3ERR': 'merr_app_ukidss_j',\n",
-    "        'JKRONMAG': 'm_ukidss_j',\n",
-    "        'JKRONMAGERR': 'merr_ukidss_j',\n",
-    "        'KAPERMAG3': 'm_app_ukidss_k',\n",
-    "        'KAPERMAG3ERR': 'merr_app_ukidss_k',\n",
-    "        'KKRONMAG': 'm_ukidss_k',\n",
-    "         'KKRONMAGERR': 'merr_ukidss_k',\n",
-    "         'PSTAR': 'las_stellarity'\n",
+    "        'YHALLMAG': 'm_ukidss_y',\n",
+    "        'YHALLMAGERR': 'merr_ukidss_y',\n",
+    "        'YAPERMAG3': 'm_ap_ukidss_y',\n",
+    "        'YAPERMAG3ERR': 'merr_ap_ukidss_y',\n",
+    "        'J_1HALLMAG': 'm_ukidss_j',\n",
+    "        'J_1HALLMAGERR': 'merr_ukidss_j',\n",
+    "        'J_1APERMAG3': 'm_ap_ukidss_j',\n",
+    "        'J_1APERMAG3ERR': 'merr_ap_ukidss_j',\n",
+    "        'HAPERMAG3': 'm_ap_ukidss_k',\n",
+    "        'HAPERMAG3ERR': 'merr_ap_ukidss_k',\n",
+    "        'HHALLMAG': 'm_ukidss_k',\n",
+    "        'HHALLMAGERR': 'merr_ukidss_k',\n",
+    "        'KAPERMAG3': 'm_ap_ukidss_k',\n",
+    "        'KAPERMAG3ERR': 'merr_ap_ukidss_k',\n",
+    "        'KHALLMAG': 'm_ukidss_k',\n",
+    "        'KHALLMAGERR': 'merr_ukidss_k',\n",
+    "        'PSTAR': 'las_stellarity'\n",
     "    })\n",
     "\n",
     "catalogue = Table.read(\n",
@@ -143,7 +151,8 @@
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
     "\n",
-    "epoch = 2008\n",
+    "#Epochs between 2005 and 2007 present. Rough average:\n",
+    "epoch = 2006\n",
     "\n",
     "# Clean table metadata\n",
     "catalogue.meta = None"
@@ -184,7 +193,7 @@
     "        catalogue.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
     "        \n",
     "        # Band-flag column\n",
-    "        if \"app\" not in col:\n",
+    "        if \"ap\" not in col:\n",
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
     "        \n",
     "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting."
@@ -288,7 +297,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['merr_app_ukidss_j', 'merr_app_ukidss_k']\n",
+    "SORT_COLS = ['merr_ap_ukidss_j', 'merr_ap_ukidss_k']\n",
     "FLAG_NAME = 'las_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
