[dmu1_ml_ELAIS-N1] Typo

--- a/dmu1/dmu1_ml_ELAIS-N1/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-N1/2_Merging.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "We first merge the optical catalogues and then add the infrared ones: WFC, DXS, SpARCS, HSC, PS1, SERVS, SWIRE.\n",
     "\n",
-    "At every step, we look at the repartion of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
+    "At every step, we look at the distribution of the distances to the nearest source in the merged catalogue to determine the best crossmatching radius."
    ]
   },
   {
