fixing column names for VICS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VIKS82.ipynb
@@ -116,7 +116,7 @@
     "        'ra': \"vics82_ra\",\n",
     "        'dec': \"vics82_dec\",\n",
     "        'CLASS_STAR':  \"vics82_stellarity\",\n",
-    "        'MAGAUTO': \"m_vics82_k\", \n",
+    "        'MAG_AUTO': \"m_vics82_k\", \n",
     "        'MAG_APER': \"m_ap_vics82_k\", \n",
     "        'JMAG_AUTO': \"m_vics82_j\", \n",
     "        'JMAG_APER': \"m_ap_vics82_j\", \n",
@@ -133,11 +133,13 @@
     "# Clean table metadata\n",
     "catalogue.meta = None\n",
     "\n",
+    "a[:,2]\n",
+    "(0,1,2,3,4)\n",
+    "\n",
     "#replace list of aperture magnitudes with appropriate choice from list\n",
     "# Apertures (1\", 1.5\", 2\", 2.5\" and 3\"\n",
-    "catalogue[\"m_ap_vics82_k\"] = [mag[0] for mag in catalogue[\"m_ap_vics82_k\"]]\n",
-    "catalogue[\"m_ap_vics82_j\"] = [mag[0] for mag in catalogue[\"m_ap_vics82_j\"]]\n",
-    "# TODO: Check this works as expected."
+    "catalogue[\"m_ap_vics82_j\"] = catalogue[\"m_ap_vics82_j\"][:, 2]\n",
+    "catalogue[\"m_ap_vics82_j\"] = catalogue[\"m_ap_vics82_j\"][:, 2]\n"
    ]
   },
   {
