minor changes on HS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2_Merging.ipynb
@@ -604,7 +604,7 @@
    "source": [
     "master_catalogue.add_column(Column(gen_help_id(master_catalogue['ra'], master_catalogue['dec']),\n",
     "                                   name=\"help_id\"))\n",
-    "master_catalogue.add_column(Column(np.full(len(master_catalogue), \"ELAIS-N1\", dtype='<U18'),\n",
+    "master_catalogue.add_column(Column(np.full(len(master_catalogue), \"Herschel-Stripe-82\", dtype='<U18'),\n",
     "                                   name=\"field\"))"
    ]
   },
@@ -637,7 +637,7 @@
    "source": [
     "## VI - Choosing between multiple values for the same filter\n",
     "\n",
-    "Both SERVS and SWIRE provide IRAC1 and IRAC2 fluxes. SERVS is deeper but tends to under-estimate flux of bright sources (Mattia said over 2000 µJy) as illustrated by this comparison of SWIRE, SERVS, and Spitzer-EIP fluxes."
+    "Both SHELA and SpIES provide IRAC1 and IRAC2 fluxes. SERVS is deeper but tends to under-estimate flux of bright sources (Mattia said over 2000 µJy) as illustrated by this comparison of SWIRE, SERVS, and Spitzer-EIP fluxes."
    ]
   },
   {
@@ -1124,7 +1124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VII.b Wavelenght domain detection\n",
+    "## VII.b Wavelength domain detection\n",
     "\n",
     "We add a binary `flag_optnir_det` indicating that a source was detected in a given wavelenght domain:\n",
     "\n",
