VIKS82 now appears to work

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2_Merging.ipynb
@@ -1050,7 +1050,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VII.a Wavelenght domain coverage\n",
+    "## VII.a Wavelength domain coverage\n",
     "\n",
     "We add a binary `flag_optnir_obs` indicating that a source was observed in a given wavelenght domain:\n",
     "\n",
