notebooks 1.1 through 2 first pass complete on HS82

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
@@ -504,7 +504,7 @@
    },
    "outputs": [],
    "source": [
-    "catalogue.write(\"{}/VHS.fits\".format(OUT_DIR), overwrite=True)"
+    "catalogue.write(\"{}/VISTA-VHS.fits\".format(OUT_DIR), overwrite=True)"
    ]
   }
  ],
