--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.7_SpIES.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.7_SpIES.ipynb
@@ -115,13 +115,13 @@
     "        'internal_id': \"spies_intid\",\n",
     "        'ra': \"spies_ra\",\n",
     "        'dec': \"spies_dec\",\n",
-    "        'FLUX_APER_2_ch1': \"f_app_spies_irac1\",\n",
-    "        'FLUXERR_APER_2_ch1': \"ferr_app_spies_irac1\",\n",
+    "        'FLUX_APER_2_ch1': \"f_ap_spies_irac1\",\n",
+    "        'FLUXERR_APER_2_ch1': \"ferr_ap_spies_irac1\",\n",
     "        'FLUX_AUTO_ch1': \"f_spies_irac1\",\n",
     "        'FLUXERR_AUTO_ch1': \"ferr_spies_irac1\",\n",
     "        'CLASS_STAR_ch1': \"spies_stellarity_irac1\",\n",
-    "        'FLUX_APER_2_ch2': \"f_app_spies_irac2\",\n",
-    "        'FLUXERR_APER_2_ch2': \"ferr_app_spies_irac2\",\n",
+    "        'FLUX_APER_2_ch2': \"f_ap_spies_irac2\",\n",
+    "        'FLUXERR_APER_2_ch2': \"ferr_ap_spies_irac2\",\n",
     "        'FLUX_AUTO_ch2': \"f_spies_irac2\",\n",
     "        'FLUXERR_AUTO_ch2': \"ferr_spies_irac2\",\n",
     "        'CLASS_STAR_ch2': \"spies_stellarity_irac2\",\n",
@@ -168,7 +168,7 @@
     "        catalogue.add_column(Column(error, name=\"m{}\".format(errcol[1:])))\n",
     "        \n",
     "        # Band-flag column\n",
-    "        if \"app\" not in col:\n",
+    "        if \"ap\" not in col:\n",
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n"
    ]
   },
@@ -289,7 +289,7 @@
     }
    ],
    "source": [
-    "SORT_COLS = ['ferr_app_spies_irac1', 'ferr_app_spies_irac2']\n",
+    "SORT_COLS = ['ferr_ap_spies_irac1', 'ferr_ap_spies_irac2']\n",
     "FLAG_NAME = \"spies_flag_cleaned\"\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
