First pass at checks and balances

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
@@ -155,12 +155,15 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = []\n",
-    "g_bands = [ \"SUPRIME g\", \"GPC1 g\"]\n",
-    "r_bands = [ \"SUPRIME r\", \"GPC1 r\"]\n",
-    "i_bands = [ \"SUPRIME i\", \"GPC1 i\"]\n",
-    "z_bands = [ \"SUPRIME z\", \"GPC1 z\"]\n",
-    "y_bands = [ \"SUPRIME y\", \"GPC1 y\"]"
+    "u_bands = [\"SDSS u\", \"DECaLS u\"]\n",
+    "g_bands = [ \"SDSS g\", \"DECaLS g\",\"PS1 g\", \"HSC g\", \"RCS g\"]\n",
+    "r_bands = [ \"SDSS r\", \"DECaLS r\",\"PS1 r\", \"HSC r\", \"RCS r\"]\n",
+    "i_bands = [ \"SDSS i\", \"DECaLS i\",\"PS1 i\", \"HSC i\", \"RCS i\"]\n",
+    "z_bands = [ \"SDSS z\", \"DECaLS z\",\"PS1 z\", \"HSC z\", \"RCS z\"]\n",
+    "y_bands = [ \"SDSS y\", \"DECaLS Y\",\"PS1 y\", \"HSC y\", \"RCS y\", \"VHS Y\", \"LAS Y\"] #This will compare lower case y to upper case Y\n",
+    "J_bands = [\"VHS J\", \"LAS J\", \"VICS82 J\"]\n",
+    "H_bands = [\"VHS H\", \"LAS H\"]\n",
+    "K_bands = [\"VHS K\", \"LAS K\", \"VICS82 K\"]"
    ]
   },
   {
@@ -172,7 +175,7 @@
    },
    "outputs": [],
    "source": [
-    "for band_of_a_kind in [u_bands, g_bands, r_bands, i_bands, z_bands, y_bands]:\n",
+    "for band_of_a_kind in [u_bands, g_bands, r_bands, i_bands, z_bands, y_bands, J_bands, H_bands, K_bands]:\n",
     "    for band1, band2 in itertools.combinations(band_of_a_kind, 2):\n",
     "        \n",
     "        basecol1, basecol2 = band1.replace(\" \", \"_\").lower(), band2.replace(\" \", \"_\").lower()\n",
@@ -297,8 +300,8 @@
    },
    "outputs": [],
    "source": [
-    "nb_compare_mags(twomass['jmag'], master_catalogue['m_ukidss_j'][ml_twomass_idx],\n",
-    "                labels=(\"2MASS J\", \"UKIDSS J (total)\"))"
+    "nb_compare_mags(twomass['jmag'], master_catalogue['m_las_j'][ml_twomass_idx],\n",
+    "                labels=(\"2MASS J\", \"UKIDSS LAS J (total)\"))"
    ]
   },
   {
@@ -309,8 +312,8 @@
    },
    "outputs": [],
    "source": [
-    "nb_compare_mags(twomass['kmag'], master_catalogue['m_ukidss_k'][ml_twomass_idx],\n",
-    "                labels=(\"2MASS K\", \"UKIDSS K (total)\"))"
+    "nb_compare_mags(twomass['kmag'], master_catalogue['m_las_k'][ml_twomass_idx],\n",
+    "                labels=(\"2MASS K\", \"UKIDSS LAS K (total)\"))"
    ]
   },
   {
@@ -331,8 +334,8 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_cfht_megacam_r'],\n",
-    "    master_catalogue['m_ap_cfht_megacam_r'] - master_catalogue['m_cfht_megacam_r'],\n",
+    "    master_catalogue['m_rcs_r'],\n",
+    "    master_catalogue['m_ap_rcs_r'] - master_catalogue['m_rcs_r'],\n",
     "    \"r total magnitude (CFHT)\", \"r aperture mag - total mag (CFHT)\",\n",
     "    master_catalogue[\"stellarity\"],\n",
     "    invert_x=True\n",
@@ -358,9 +361,9 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_wfc_g'] - master_catalogue['m_wfc_i'],\n",
-    "    master_catalogue['m_ukidss_j'] - master_catalogue['m_ukidss_k'],\n",
-    "    \"g - i (WFC)\", \"J - K (UKIDSS)\",\n",
+    "    master_catalogue['m_ps1_g'] - master_catalogue['m_ps1_i'],\n",
+    "    master_catalogue['m_las_j'] - master_catalogue['m_las_k'],\n",
+    "    \"g - i (PanSTARRS)\", \"J - K (UKIDSS LAS)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -374,9 +377,9 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_wfc_i'] - master_catalogue['m_irac1'],\n",
-    "    master_catalogue['m_wfc_g'] - master_catalogue['m_wfc_i'],\n",
-    "    \"WFC i - IRAC1\", \"g - i (WFC)\",\n",
+    "    master_catalogue['m_ps1_i'] - master_catalogue['m_irac1'],\n",
+    "    master_catalogue['m_ps1_g'] - master_catalogue['m_ps1_i'],\n",
+    "    \"PanSTARRS i - IRAC1\", \"g - i (PanSTARRS)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -390,8 +393,8 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_cfht_megacam_u'] - master_catalogue['m_cfht_megacam_g'],\n",
-    "    master_catalogue['m_cfht_megacam_g'] - master_catalogue['m_cfht_megacam_r'],\n",
+    "    master_catalogue['m_rcs_u'] - master_catalogue['m_rcs_g'],\n",
+    "    master_catalogue['m_rcs_g'] - master_catalogue['m_rcs_r'],\n",
     "    \"u - g (CFHT)\", \"g - r (CFHT)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
@@ -406,9 +409,9 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_ukidss_j'] - master_catalogue['m_ukidss_k'],\n",
-    "    master_catalogue['m_wfc_g'] - master_catalogue['m_ukidss_j'],\n",
-    "    \"J - K (UKIDSS)\", \"g - J (WFC, UKIDSS)\",\n",
+    "    master_catalogue['m_las_j'] - master_catalogue['m_las_k'],\n",
+    "    master_catalogue['m_ps1_g'] - master_catalogue['m_las_j'],\n",
+    "    \"J - K (UKIDSS LAS)\", \"g - J (PanSTARRS, UKIDSS)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -422,9 +425,9 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_wfc_i'] - master_catalogue['m_wfc_z'],\n",
-    "    master_catalogue['m_wfc_z'] - master_catalogue['m_ukidss_j'],\n",
-    "    \"i - z (WFC)\", \"z - J (WFC, UKIDSS)\",\n",
+    "    master_catalogue['m_ps1_i'] - master_catalogue['m_ps1_z'],\n",
+    "    master_catalogue['m_ps1_z'] - master_catalogue['m_las_j'],\n",
+    "    \"i - z (PanSTARRS)\", \"z - J (PanSTARRS, UKIDSS LAS)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
@@ -438,9 +441,9 @@
    "outputs": [],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_irac3'] - master_catalogue['m_irac4'],\n",
+    "    master_catalogue['m_ps1_i'] - master_catalogue['m_ps1_z'],\n",
     "    master_catalogue['m_irac1'] - master_catalogue['m_irac2'],\n",
-    "    \"IRAC3 - IRAC4\", \"IRAC1 - IRAC2\",\n",
+    "    \"i - z (PanSTARRS)\", \"IRAC1 - IRAC2\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
    ]
