--- a/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/3_Checks_and_diagnostics.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# ELAIS-N1 master catalogue\n",
+    "# Herschel Stripe 82 master catalogue\n",
     "## Checks and diagnostics"
    ]
   },
